--- a/reference.bib
+++ b/reference.bib
@@ -47,6 +47,7 @@
 }
 
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -83,13 +84,13 @@
 }
 
 
+
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -99,6 +100,7 @@
   volume  = {28},
   number  = {12}
 }
+
 
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
@@ -130,6 +132,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -166,13 +169,13 @@
   journal = SIG
 }
 
+
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
   author    = {Atzmon, Matan and Lipman, Yaron},
   booktitle = CVPR,
   year      = {2020}
 }
-
 
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
@@ -286,7 +289,6 @@
   year      = {2019}
 }
 
-
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
   author  = {Belongie, Serge and Malik, Jitendra and Puzicha, Jan},
@@ -315,6 +317,7 @@
   number  = {1}
 }
 
+
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
   title   = {A method for registration of {3D} shapes},
@@ -323,7 +326,6 @@
   volume  = {14},
   number  = {2}
 }
-
 
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
@@ -340,6 +342,7 @@
   year      = {2017}
 }
 
+
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
   title   = {Mixed-integer quadrangulation},
@@ -348,6 +351,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
@@ -368,6 +372,7 @@
   number  = {6}
 }
 
+
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -384,6 +389,7 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
@@ -432,6 +438,7 @@
   year      = {2016}
 }
 
+
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
   title   = {Geometric deep learning: Going beyond Euclidean data},
@@ -445,6 +452,7 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
@@ -470,6 +478,7 @@
   number  = {7}
 }
 
+
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
   title   = {Surface remeshing in arbitrary codimensions},
@@ -478,6 +487,7 @@
   volume  = {22},
   number  = {9-11}
 }
+
 
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
@@ -501,7 +511,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
@@ -572,13 +581,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -601,6 +610,13 @@
   year      = {2020}
 }
 
+@inproceedings{Chen2020b,
+  title     = {A hierarchical graph network for {3D} object detection on point clouds},
+  author    = {Chen, Jintai and Lei, Biwen and Song, Qingyu and Ying, Haochao and Chen, Danny Z and Wu, Jian},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -608,6 +624,12 @@
   year      = {2021}
 }
 
+@inproceedings{Cheng2021,
+  title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
+  author    = {Cheng, Bowen and Sheng, Lu and Shi, Shaoshuai and Yang, Ming and Xu, Dong},
+  booktitle = CVPR,
+  year      = {2021}
+}
 
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
@@ -631,6 +653,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
@@ -661,6 +684,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
@@ -785,7 +809,6 @@
   year      = {2009}
 }
 
-
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
   author    = {Deng, Haowen and Birdal, Tolga and Ilic, Slobodan},
@@ -823,7 +846,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
   title     = {Cascaded pose regression},
@@ -832,13 +854,13 @@
   publiser  = {IEEE}
 }
 
-
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
   author    = {Dosovitskiy, Alexey and Springenberg, Jost Tobias and Riedmiller, Martin and Brox, Thomas},
   booktitle = NeurIPS,
   year      = {2014}
 }
+
 
 @inproceedings{Dosovitskiy2021,
   title     = {An image is worth 16x16 words: Transformers for image recognition at scale},
@@ -853,7 +875,6 @@
   journal = SA,
   year    = {2018}
 }
-
 
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
@@ -892,6 +913,13 @@
 }
 
 
+@inproceedings{Engelmann2020,
+  title     = {{3D-MPA}: Multi-proposal aggregation for {3D} semantic instance segmentation},
+  author    = {Engelmann, Francis and Bokeloh, Martin and Fathi, Alireza and Leibe, Bastian and Nie{\ss}ner, Matthias},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
   title   = {Why does unsupervised pre-training help deep learning?},
@@ -909,6 +937,7 @@
   volume  = {16},
   number  = {2}
 }
+
 
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
@@ -931,12 +960,14 @@
   year      = {2014}
 }
 
+
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
@@ -1101,14 +1132,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
   title     = {{AtlasNet}: A {Papier-M\^{a}ch\'{e}} approach to learning {3D} surface generation},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @article{Guennebaud2007,
   author  = {Guennebaud, Ga\"{e}l and Gross, Markus},
@@ -1118,7 +1147,6 @@
   volume  = {26},
   number  = {3}
 }
-
 
 @misc{Guennebaud2010,
   author       = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
@@ -1151,6 +1179,7 @@
   year      = {2018}
 }
 
+
 @misc{Guo2019,
   author        = {Yulan Guo and Hanyun Wang and Qingyong Hu and Hao Liu and Li Liu and Mohammed Bennamoun},
   title         = {Deep learning for {3D} point clouds: A survey},
@@ -1160,6 +1189,7 @@
   primaryclass  = {cs.CV}
 }
 
+
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
   author  = {Guo, Meng-Hao and Cai, Jun-Xiong and Liu, Zheng-Ning and Mu, Tai-Jiang and Martin, Ralph R and Hu, Shi-Min},
@@ -1168,6 +1198,7 @@
   number  = {2},
   year    = {2021}
 }
+
 
 @inproceedings{Gupta2016,
   author    = {Gupta, Saurabh and Hoffman, Judy and Malik, Jitendra},
@@ -1188,6 +1219,13 @@
   title     = {Noise-Contrastive Estimation: A new estimation principle for unnormalized statistical models},
   booktitle = {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
   year      = {2010}
+}
+
+@inproceedings{Gwak2020,
+  title     = {Generative sparse detection networks for {3D} single-shot object detection},
+  author    = {Gwak, JunYoung and Choy, Christopher and Savarese, Silvio},
+  booktitle = ECCV,
+  year      = {2020}
 }
 
 @inproceedings{Ha2017,
@@ -1252,7 +1290,6 @@
   volume  = {38}
 }
 
-
 @article{Harary2014,
   author  = {Harary, Gur and Tal, Ayellet and Grinspun, Eitan},
   title   = {Context-based coherent surface completion},
@@ -1261,7 +1298,6 @@
   volume  = {33},
   number  = {1}
 }
-
 
 @article{Hart1996,
   title   = {Sphere tracing: A geometric method for the antialiased ray tracing of implicit surfaces},
@@ -1295,6 +1331,7 @@
   year      = {2020}
 }
 
+
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
   title   = {Mesh denoising via $L_0$ minimization},
@@ -1303,6 +1340,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @inproceedings{He2016,
   title     = {Deep residual learning for image recognition},
@@ -1325,14 +1363,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{He2020,
   author    = {Kaiming He and Haoqi Fan and Yuxin Wu and Saining Xie and Ross Girshick},
   booktitle = CVPR,
   title     = {Momentum contrast for unsupervised visual representation learning},
   year      = {2020}
 }
-
 
 @inproceedings{He2022,
   author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
@@ -1366,12 +1402,14 @@
   year    = {2006}
 }
 
+
 @inproceedings{Hou2021,
   title     = {Exploring Data-Efficient {3D} Scene Understanding with Contrastive Scene Contexts},
   author    = {Hou, Ji and Graham, Benjamin and Nie{\ss}ner, Matthias and Saining Xie},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Hu2012,
   author  = {Ruizhen Hu and Lubin Fan and Ligang Liu},
@@ -1516,7 +1554,6 @@
   year      = {2016}
 }
 
-
 @article{Johnson1999,
   author  = {Johnson, Andrew E. and Hebert, Martial},
   title   = {Using spin images for efficient object recognition in cluttered {3D} scenes},
@@ -1560,6 +1597,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @inproceedings{Kaczmarski2013,
   author    = {Kaczmarski, Krzysztof and Rzazewski, Pawel},
@@ -1941,7 +1979,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
@@ -1981,6 +2018,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2019,7 +2057,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Liu2018b,
   title     = {Transductive centroid projection for semi-supervised large-scale recognition},
   author    = {Liu, Yu and Song, Guanglu and Shao, Jing and Jin, Xiao and Wang, Xiaogang},
@@ -2048,13 +2085,13 @@
   year      = {2020}
 }
 
-
 @article{Liu2020a,
   title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
   author  = {Yunze Liu and Li Yi and Shanghang Zhang and Qingnan Fan and Thomas Funkhouser and Hao Dong},
   journal = {arXiv:2012.13089},
   year    = {2020}
 }
+
 
 @inproceedings{Liu2020b,
   title     = {A Closer Look at Local Aggregation Operators in Point Cloud Analysis},
@@ -2070,14 +2107,12 @@
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
 
-
 @inproceedings{Liu2021a,
   title        = {Swin transformer: Hierarchical vision transformer using shifted windows},
   author       = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
   booksubtitle = ICCV,
   year         = {2021}
 }
-
 
 @inproceedings{Liu2021b,
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
@@ -2086,13 +2121,13 @@
   year      = {2021}
 }
 
+
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
   author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2101,12 +2136,21 @@
   year    = {2021}
 }
 
+@inproceedings{Liu2021e,
+  author    = {Liu, Ze and Zhang, Zheng and Cao, Yue and Hu, Han and Tong, Xin},
+  title     = {Group-Free 3D Object Detection via Transformers},
+  booktitle = ICCV,
+  year      = {2021}
+}
+
+
 @inproceedings{Loffe2015,
   author    = {Loffe, Sergey and Szegedy, Christian},
   title     = {{Batch Normalization}: Accelerating deep network training by reducing internal covariate shift},
   booktitle = ICML,
   year      = {2015}
 }
+
 
 @book{Logan2017,
   title     = {A first course in the finite element method},
@@ -2115,13 +2159,13 @@
   publisher = {Nelson Education}
 }
 
-
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
   title     = {Fully convolutional models for semantic segmentation},
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @inproceedings{Lorensen1987,
   author    = {Lorensen, William E. and Cline, Harvey E.},
@@ -2145,6 +2189,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
@@ -2530,7 +2575,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Qi2016,
   author    = {Charles R. Qi and Hao Su and Matthias Nie{\ss}ner and Angela Dai and Mengyuan Yan and Leonidas J. Guibas},
   title     = {Volumetric and multi-view {CNNs} for object classification on {3D} data},
@@ -2551,7 +2595,6 @@
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Qi2019,
   author    = {Qi, Charles R. and Litany, Or and He, Kaiming and Guibas, Leonidas J},
@@ -2584,6 +2627,7 @@
   year        = {2018}
 }
 
+
 @article{Raffel2019,
   title   = {Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
   author  = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
@@ -2591,6 +2635,7 @@
   volume  = {21},
   year    = {2020}
 }
+
 
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
@@ -2732,6 +2777,12 @@
   year    = {2021}
 }
 
+@inproceedings{Rukhovich2022,
+  title     = {{FCAF3D}: fully convolutional anchor-free {3D} object detection},
+  author    = {Rukhovich, Danila and Vorontsova, Anna and Konushin, Anton},
+  booktitle = ECCV,
+  year      = {2022}
+}
 
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
@@ -2777,6 +2828,7 @@
   year      = {2004}
 }
 
+
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
@@ -2817,7 +2869,6 @@
   volume  = {31},
   number  = {6}
 }
-
 
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
@@ -2869,6 +2920,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
   title     = {{CSGNet}: Neural shape parser for constructive solid geometry},
@@ -2919,14 +2971,12 @@
   number  = {3}
 }
 
-
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
 }
-
 
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
@@ -2951,6 +3001,7 @@
   volume  = {43}
 }
 
+
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
   title   = {Unsupervised co-segmentation of a set of shapes via descriptor-space spectral clustering},
@@ -2966,6 +3017,7 @@
   booktitle = NeurIPS,
   year      = {2002}
 }
+
 
 @inproceedings{Simonovsky2017,
   title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
@@ -2995,14 +3047,12 @@
   year    = {2018}
 }
 
-
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
   booktitle = NeurIPS,
   year      = {2019}
 }
-
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -3026,6 +3076,7 @@
   year   = {2014}
 }
 
+
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
   title     = {Semantic scene completion from a single depth image},
@@ -3040,6 +3091,7 @@
   url          = {https://modelnet.cs.princeton.edu/},
   year         = {2019}
 }
+
 
 @inproceedings{Sorkine2004,
   author    = {Sorkine, O. and Cohen-Or, D. and Lipman, Y. and Alexa, M. and R\"{o}ssl, C. and Seidel, H.-P.},
@@ -3085,7 +3137,6 @@
   year      = {2020}
 }
 
-
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
   title   = {Edge-preserving multiscale image decomposition based on local extrema},
@@ -3094,7 +3145,6 @@
   volume  = {28},
   number  = {5}
 }
-
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -3114,6 +3164,7 @@
   number  = {3}
 }
 
+
 @article{Sun2009,
   author  = {Xianfang Sun and Paul L. Rosin and Ralph R. Martin and Frank C. Langbein},
   title   = {Noise analysis and synthesis for {3D} laser depth scanners},
@@ -3122,6 +3173,7 @@
   volume  = {71},
   number  = {2}
 }
+
 
 @article{Sun2009a,
   author       = {Sun, Jian and Ovsjanikov, Maks and Guibas, Leonidas},
@@ -3174,14 +3226,12 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
-
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -3197,6 +3247,7 @@
   year      = {2020}
 }
 
+
 @article{Tang2018,
   title   = {Real-time Compression and Streaming of {4D} Performances},
   author  = {Tang, Danhang and Dou, Mingsong and Lincoln, Peter and Davidson, Philip and Guo, Kaiwen and Taylor, Jonathan and Fanello, Sean and Keskin, Cem and Kowdle, Adarsh and Bouaziz, Sofien and others},
@@ -3205,6 +3256,7 @@
   number  = {6},
   year    = {2018}
 }
+
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -3236,14 +3288,12 @@
   number  = {3}
 }
 
-
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
   booktitle = {Proc. of the conference on Visualization},
   year      = {2002}
 }
-
 
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3282,6 +3332,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
@@ -3289,13 +3340,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
   title     = {Bilateral filtering for gray and color images},
   booktitle = ICCV,
   year      = {1998}
 }
-
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3318,6 +3369,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
   author    = {Ulyanov, Dmitry and Vedaldi, Andrea and Lempitsky, Victor},
@@ -3325,14 +3377,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
   author    = {Ummenhofer, Benjamin and Koltun, Vladlen},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
@@ -3350,12 +3400,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
   author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
   booktitle = ICLR,
   year      = {2018}
 }
+
 
 @inproceedings{Vincent2008,
   title     = {Extracting and composing robust features with denoising autoencoders},
@@ -3575,7 +3627,6 @@
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
 
-
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
   title   = {Bi-normal filtering for mesh denoising},
@@ -3584,7 +3635,6 @@
   volume  = {21},
   number  = {1}
 }
-
 
 @inproceedings{Wei2016,
   author    = {Linyu Wei and Qixing Huang and Duygu Ceylan and Etienne Vouga and Hao Li},
@@ -3602,12 +3652,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Williams2021,
   title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
   author    = {Williams, Francis and Trager, Matthew and Bruna, Joan and Zorin, Denis},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Williams2022,
   title     = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
@@ -3662,7 +3714,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Wu2018b,
   author    = {Wu, Jiajun and Zhang, Chengkai and Zhang, Xiuming and Zhang, Zhoutong and Freeman, William T and Tenenbaum, Joshua B},
   title     = {Learning shape priors for single-view {3D} completion and reconstruction},
@@ -3685,6 +3736,7 @@
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
+
 
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
@@ -3709,14 +3761,12 @@
   year    = {2022}
 }
 
-
 @article{Xia2021,
   title   = {{GeodesicEmbedding (GE)}: a high-dimensional embedding approach for fast geodesic distance queries},
   author  = {Xia, Qianwei and Zhang, Juyong and Fang, Zheng and Li, Jin and Zhang, Mingyue and Deng, Bailin and He, Ying},
   journal = TVCG,
   year    = {2021}
 }
-
 
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
@@ -3734,6 +3784,7 @@
   number  = {7}
 }
 
+
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
@@ -3741,10 +3792,25 @@
   year    = {2020}
 }
 
+
+@inproceedings{Xie2020a,
+  title     = {{MLCVNet}: Multi-level context votenet for {3D} object detection},
+  author    = {Xie, Qian and Lai, Yu-Kun and Wu, Jing and Wang, Zhoutao and Zhang, Yiming and Xu, Kai and Wang, Jun},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
   author    = {Xie, Zhenda and Lin, Yutong and Zhang, Zheng and Cao, Yue and Lin, Stephen and Hu, Han},
   booktitle = CVPR,
+  year      = {2021}
+}
+
+@inproceedings{Xie2021a,
+  title     = {{VENet}: Voting Enhancement Network for {3D} Object Detection},
+  author    = {Xie, Qian and Lai, Yu-Kun and Wu, Jing and Wang, Zhoutao and Lu, Dening and Wei, Mingqiang and Wang, Jun},
+  booktitle = ICCV,
   year      = {2021}
 }
 
@@ -3805,7 +3871,6 @@
   year    = {2015}
 }
 
-
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
   title     = {{SpiderCNN}: Deep Learning on Point Sets with Parameterized Convolutional Filters},
@@ -3820,6 +3885,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
@@ -3843,7 +3909,6 @@
   year      = {2006}
 }
 
-
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
@@ -3858,6 +3923,7 @@
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
+
 
 @inproceedings{Yan2020a,
   title     = {{PointASNL}: Robust point clouds processing using nonlocal neural networks with adaptive sampling},
@@ -3875,13 +3941,13 @@
   year    = {2015}
 }
 
-
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
   booktitle = {ICCV Workshop},
   year      = {2017}
 }
+
 
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
@@ -3929,7 +3995,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
@@ -3957,6 +4022,7 @@
   year    = {2013}
 }
 
+
 @article{Ying2014,
   title   = {{Parallel Chen-Han (PCH)} algorithm for discrete geodesics},
   author  = {Ying, Xiang and Xin, Shi-Qing and He, Ying},
@@ -3972,7 +4038,6 @@
   title     = {{PVNet}: A joint convolutional network of point cloud and multi-view for {3D} shape recognition},
   year      = {2018}
 }
-
 
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -3990,6 +4055,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -4019,13 +4085,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
   title     = {Surface feature detection and description with applications to mesh matching},
   booktitle = CVPR,
   year      = {2009}
 }
+
 
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
@@ -4034,13 +4100,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
   author    = {Zeng, Andy and Song, Shuran and Nie{\ss}ner, Matthias and Fisher, Matthew and Xiao, Jianxiong and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -4060,7 +4126,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
@@ -4078,6 +4143,7 @@
   number  = {7}
 }
 
+
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -4087,13 +4153,13 @@
   issue   = {7}
 }
 
-
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
   title     = {Colorful image colorization},
   year      = {2016}
 }
+
 
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
@@ -4126,6 +4192,13 @@
 @inproceedings{Zhang2020,
   title     = {Deep {FusionNet} for point cloud semantic segmentation},
   author    = {Zhang, Feihu and Fang, Jin and Wah, Benjamin and Torr, Philip},
+  booktitle = ECCV,
+  year      = {2020}
+}
+
+@inproceedings{Zhang2020a,
+  title     = {{H3DNet}: {3D} object detection using hybrid geometric primitives},
+  author    = {Zhang, Zaiwei and Sun, Bo and Yang, Haitao and Huang, Qixing},
   booktitle = ECCV,
   year      = {2020}
 }
