--- a/reference.bib
+++ b/reference.bib
@@ -2110,7 +2110,7 @@
 @inproceedings{Liu2021a,
   title        = {Swin transformer: Hierarchical vision transformer using shifted windows},
   author       = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
-  booksubtitle = ICCV,
+  booktitle = ICCV,
   year         = {2021}
 }
 
@@ -3747,17 +3747,17 @@
   year    = {2020}
 }
 
-@article{Wu2021,
+@inproceedings{Wu2021,
   title   = {{CvT}: Introducing convolutions to vision transformers},
   author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
-  journal = ICCV,
+  booktitle = ICCV,
   year    = {2021}
 }
 
 @inproceedings{Wu2022,
   title   = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
   author  = {Wu, Xiaoyang and Lao, Yixing and Jiang, Li and Liu, Xihui and Zhao, Hengshuang},
-  journal = NeurIPS,
+  booktitle = NeurIPS,
   year    = {2022}
 }
 
@@ -3768,10 +3768,10 @@
   year    = {2021}
 }
 
-@article{Xiao2021,
+@inproceedings{Xiao2021,
   title   = {Early convolutions help transformers see better},
   author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
-  journal = NeurIPS,
+  booktitle = NeurIPS,
   year    = {2021}
 }
 
